2008-02-21 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: TARGETCC = "/Xcode2.5/usr/bin/gcc"
	  TARGETCXX = "/Xcode2.5/usr/bin/g++"

2008-02-20 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 2.5; binaries generated with Xcode 3.0 seems not to be
	  backward compatible with Mac OS X 10.4 and older

2008-02-14 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: mirror-doors is now Mac OS X 10.5 Leopard
	  with Xcvode 3.0

2008-01-13 Borut Razem <borut.razem AT siol.net>

	* Makefile, lib/bootstrap.mk, lib/variables.mk, lib/version.mk:
	  added version.mk, introduced variables SDCC_VER_MAJOR,
	  SDCC_VER_MINOR, SDCC_VER_DEVEL, SDCCREVISION renamed to
	  SDCC_REVISION

2007-10-27 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk: test-mcs51 replaced with test-mcs51-small in
	  REGTESTTARGETS

2007-10-05 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/bootstrap.mk: the default definition of BUILDNAME,
	  TARBALLBASE and TARBALLDIR moved from bootstrap.mk to variables.mk, so
	  that they can be redefined by local settings. Introduced TRAGET_PLATFORM
	* local/mirror-doors.mk: universal binaries are producrd; defined
	  TARAGET_PLATFORM as universal-apple-macosx

2007-08-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: changed ~/.sdcc_builder/local to
	  $(HOME)/.sdcc_builder/local since not all shells have
	  a special meaning for ~

2007-06-28 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: slightly changed TARGETLDFLAGS

2007-06-27 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: create Mac OS X universal binaries

2007-06-03 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/local.mk: added posibility to have the local
	  machine makefiles in a user defined directory, ~/.sdcc_builder/local
	  by default; defined in LOCAL_MK variable
