@@ -1,3 +1,7 @@
+2008-03-10 Borut Razem <borut.razem AT siol.net>
+
+	* lib/doc-archive.mk: include ChangeLog into the doc archive
+
 2008-02-21 Borut Razem <borut.razem AT siol.net>
 
 	* local/mirror-doors.mk: TARGETCC = "/Xcode2.5/usr/bin/gcc"
